# homegrid

./: LICENSE  README.md  pyproject.toml
homegrid/: __init__.py  base.py  benchmark.py  homegrid_base.py  homegrid_embeds.pkl  homegrid_sentences.txt  language_wrappers.py  layout.py  manual_control.py  rendering.py  wrappers.py
scripts/: embed_offline.py
